--- a/02-Challenge/Develop/server/package.json
+++ b/02-Challenge/Develop/server/package.json
@@ -1,7 +1,6 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "type": "module",
   "scripts": {
@@ -11,7 +10,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "nodemonConfig": {
-    "watch": ["src"],
+    "watch": [
+      "src"
+    ],
     "ext": "ts,json,js",
     "exec": "npx tsc && node dist/server.js"
   },
@@ -29,6 +30,9 @@
     "@types/node": "^20.12.7",
     "@types/uuid": "^9.0.8",
     "nodemon": "^3.1.0",
-    "typescript": "^5.4.5"
-  }
+    "typescript": "^5.4.5",
+    "vite": "^6.1.1"
+  },
+  "keywords": [],
+  "description": ""
 }
